--- a/env_dev_with_ansible/Vagrantfile
+++ b/env_dev_with_ansible/Vagrantfile
@@ -3,7 +3,7 @@ $mysql_script = <<-SCRIPT
 	apt-get -q update && apt-get -q install -y mysql-server-5.7
 SCRIPT
 
-$wildfly = <<-SCRIPT
+$wildfly_script = <<-SCRIPT
 	echo Downloading wildfly
 	wget -q https://download.jboss.org/wildfly/17.0.0.Final/wildfly-17.0.0.Final.zip
 	unzip wildfly-17.0.0.Final.zip -d /opt/
@@ -36,9 +36,8 @@ Vagrant.configure("2") do |config|
 	appserver.vm.provision :shell, inline: "apt-get -q install -y openjdk-11-jre-headless"
 
 	# install wildfly
-	appserver.vm.provision "shell", inline: $wildfly
+	appserver.vm.provision "shell", inline: $wildfly_script
   end	
-
 
   config.vm.define "mysqldb" do |mysql|
 	# network configuration
@@ -63,6 +62,8 @@ Vagrant.configure("2") do |config|
 	mysql.vm.provision "shell",
 	inline: "cat /devops/db_files/mysqld.cnf > /etc/mysql/mysql.conf.d/mysqld.cnf && \
 			service mysql restart"
-  end	
+  end
+
+
   
 end
