--- a/env_dev_with_ansible/Vagrantfile
+++ b/env_dev_with_ansible/Vagrantfile
@@ -66,7 +66,8 @@ Vagrant.configure("2") do |config|
 
 	# run ansible
 	mysql.vm.provision "ansible" do |ansible|
-    	ansible.playbook = "config/ansible/playbook.yml"
+		ansible.inventory_path = "./config/ansible/hosts"
+    	ansible.playbook = "./config/ansible/playbook.yml"
   	end
 
   end
