general refactor and wordpress include

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 env_dev/*.log
 env_dev/.vagrant
-env_dev/config/id_rsa_vagrant
 env_dev_with_ansible/*.log
 env_dev_with_ansible/.vagrant
-env_dev_with_ansible/config/id_rsa_vagrant
 id_rsa_vagrant
 **/*.log
 **/*.retry
+**/.vagrant
