--- a/env_wordpress/config/ansible/wordpress/playbook.yml
+++ b/env_wordpress/config/ansible/wordpress/playbook.yml
@@ -27,10 +27,18 @@
         state: present 
       become: yes
 
-    - name: Create admin user with all database privileges
+    - name: Create a admin user
       mysql_user:
         name: admin
         password: admin1
         priv: '*.*:ALL'
         state: present
       become: yes
+
+    - name: Create a wordpress user
+      mysql_user:
+        name: wordpress_user
+        password: wordpress_pass
+        priv: 'wordpress_db.*:ALL'
+        state: present
+      become: yes  
