--- a/env_wordpress/config/ansible/wordpress/playbook.yml
+++ b/env_wordpress/config/ansible/wordpress/playbook.yml
@@ -42,3 +42,15 @@
         priv: 'wordpress_db.*:ALL'
         state: present
       become: yes  
+
+    - name: Download wordpress package
+      get_url:
+        url: https://wordpress.org/latest.tar.gz
+        dest: /tmp/wordpress.tar.gz
+    
+    - name: Extract wordpress.tar.gz
+      unarchive:
+        src: /tmp/wordpress.tar.gz
+        dest: /var/www/
+        remote_src: yes
+      become: yes
