--- a/env_wordpress/Vagrantfile
+++ b/env_wordpress/Vagrantfile
@@ -6,24 +6,47 @@ SCRIPT
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
   
-  config.vm.define "wordpress" do |wordpress|
-	wordpress.vm.network "private_network", ip: "172.28.128.8"
+  # WORDPRESS APP SERVER
+  config.vm.define "wp_app" do |wp_app|
+	wp_app.vm.network "private_network", ip: "172.28.128.8"
 
-	wordpress.vm.provider "virtualbox" do |v|
+	wp_app.vm.provider "virtualbox" do |v|
+		v.memory = 1024
+		v.cpus = 1
+	end
+
+	wp_app.vm.synced_folder ".", "/vagrant", disabled: true	  
+	wp_app.vm.synced_folder "./config",	 "/devops/config"
+
+  	wp_app.vm.provision "shell", inline: $add_ssh_key
+  	wp_app.vm.provision :shell, inline: "apt-get -q update"
+
+	# run ansible
+	#wp_app.vm.provision "ansible" do |ansible|
+	#	ansible.inventory_path = "./config/ansible/hosts"
+    # 	ansible.playbook = "./config/ansible/wordpress/playbook.yml"
+  	#end
+  end
+
+  # WORDPRESS DB SERVER
+  config.vm.define "wp_mysql" do |wp_mysql|
+	wp_mysqlvm.network "private_network", ip: "172.28.128.9"
+
+	wp_mysqlvm.provider "virtualbox" do |v|
 		v.memory = 2048
 		v.cpus = 1
 	end
 
-	wordpress.vm.synced_folder ".", "/vagrant", disabled: true	  
-	wordpress.vm.synced_folder "./config",	 "/devops/config"
+	wp_mysqlvm.synced_folder ".", "/vagrant", disabled: true	  
+	wp_mysqlvm.synced_folder "./config",	 "/devops/config"
 
-  	wordpress.vm.provision "shell", inline: $add_ssh_key
-  	wordpress.vm.provision :shell, inline: "apt-get -q update"
+  	wp_mysqlvm.provision "shell", inline: $add_ssh_key
+  	wp_mysqlvm.provision :shell, inline: "apt-get -q update"
 
 	# run ansible
-	#wordpress.vm.provision "ansible" do |ansible|
+	#wp_mysqlvm.provision "ansible" do |ansible|
 	#	ansible.inventory_path = "./config/ansible/hosts"
-    # 	ansible.playbook = "./config/ansible/wordpress/playbook.yml"
+    # 	ansible.playbook = "./config/ansible/mysql/playbook.yml"
   	#end
   end
 
