--- a/env_wordpress/Vagrantfile
+++ b/env_wordpress/Vagrantfile
@@ -30,21 +30,21 @@ Vagrant.configure("2") do |config|
 
   # WORDPRESS DB SERVER
   config.vm.define "wp_mysql" do |wp_mysql|
-	wp_mysqlvm.network "private_network", ip: "172.28.128.9"
+	wp_mysql.vm.network "private_network", ip: "172.28.128.9"
 
-	wp_mysqlvm.provider "virtualbox" do |v|
+	wp_mysql.vm.provider "virtualbox" do |v|
 		v.memory = 2048
 		v.cpus = 1
 	end
 
-	wp_mysqlvm.synced_folder ".", "/vagrant", disabled: true	  
-	wp_mysqlvm.synced_folder "./config",	 "/devops/config"
+	wp_mysql.vm.synced_folder ".", "/vagrant", disabled: true	  
+	wp_mysql.vm.synced_folder "./config",	 "/devops/config"
 
-  	wp_mysqlvm.provision "shell", inline: $add_ssh_key
-  	wp_mysqlvm.provision :shell, inline: "apt-get -q update"
+  	wp_mysql.vm.provision "shell", inline: $add_ssh_key
+  	wp_mysql.vm.provision :shell, inline: "apt-get -q update"
 
 	# run ansible
-	#wp_mysqlvm.provision "ansible" do |ansible|
+	#wp_mysql.vm.provision "ansible" do |ansible|
 	#	ansible.inventory_path = "./config/ansible/hosts"
     # 	ansible.playbook = "./config/ansible/mysql/playbook.yml"
   	#end
