--- a/env_wordpress/Vagrantfile
+++ b/env_wordpress/Vagrantfile
@@ -4,50 +4,42 @@ $add_ssh_key = <<-SCRIPT
 SCRIPT
 
 Vagrant.configure("2") do |config|
-  config.vm.box = "ubuntu/bionic64"
-  
-  # WORDPRESS APP SERVER
-  config.vm.define "wp_app" do |wp_app|
-	wp_app.vm.network "private_network", ip: "172.28.128.8"
+	config.vm.box = "ubuntu/bionic64"
 
-	wp_app.vm.provider "virtualbox" do |v|
-		v.memory = 1024
-		v.cpus = 1
+	# WORDPRESS DB SERVER
+	config.vm.define "wp_mysql" do |wp_mysql|
+		wp_mysql.vm.network "private_network", ip: "172.28.128.9"
+
+		wp_mysql.vm.provider "virtualbox" do |v|
+			v.memory = 2048
+			v.cpus = 1
+		end
+
+		wp_mysql.vm.synced_folder ".", "/vagrant", disabled: true	  
+		wp_mysql.vm.synced_folder "./config",	 "/devops/config"
+
+		wp_mysql.vm.provision "shell", inline: $add_ssh_key
 	end
 
-	wp_app.vm.synced_folder ".", "/vagrant", disabled: true	  
-	wp_app.vm.synced_folder "./config",	 "/devops/config"
+	# WORDPRESS APP SERVER
+	config.vm.define "wp_app" do |wp_app|
+		wp_app.vm.network "private_network", ip: "172.28.128.8"
 
-  	wp_app.vm.provision "shell", inline: $add_ssh_key
-  	wp_app.vm.provision :shell, inline: "apt-get -q update"
+		wp_app.vm.provider "virtualbox" do |v|
+			v.memory = 1024
+			v.cpus = 1
+		end
 
-	# run ansible
-	#wp_app.vm.provision "ansible" do |ansible|
-	#	ansible.inventory_path = "./config/ansible/hosts"
-    # 	ansible.playbook = "./config/ansible/wordpress/playbook.yml"
-  	#end
-  end
+		wp_app.vm.synced_folder ".", "/vagrant", disabled: true	  
+		wp_app.vm.synced_folder "./config",	 "/devops/config"
 
-  # WORDPRESS DB SERVER
-  config.vm.define "wp_mysql" do |wp_mysql|
-	wp_mysql.vm.network "private_network", ip: "172.28.128.9"
-
-	wp_mysql.vm.provider "virtualbox" do |v|
-		v.memory = 2048
-		v.cpus = 1
+		wp_app.vm.provision "shell", inline: $add_ssh_key
 	end
 
-	wp_mysql.vm.synced_folder ".", "/vagrant", disabled: true	  
-	wp_mysql.vm.synced_folder "./config",	 "/devops/config"
-
-  	wp_mysql.vm.provision "shell", inline: $add_ssh_key
-  	wp_mysql.vm.provision :shell, inline: "apt-get -q update"
-
 	# run ansible
-	#wp_mysql.vm.provision "ansible" do |ansible|
-	#	ansible.inventory_path = "./config/ansible/hosts"
-    # 	ansible.playbook = "./config/ansible/mysql/playbook.yml"
-  	#end
-  end
+	config.vm.provision "ansible" do |ansible|
+		ansible.inventory_path = "./config/ansible/hosts"
+	 	ansible.playbook = "./config/ansible/playbook.yml"
+	end
 
 end
