--- a/env_wordpress/config/ansible/playbook.yml
+++ b/env_wordpress/config/ansible/playbook.yml
@@ -19,14 +19,14 @@
 
     - name: Create mysql database - wordpress_db
       mysql_db:
-        name: wordpress_db
+        name: "{{ wp_db_name }}"
         state: present 
       become: yes
 
     - name: Create a admin user
       mysql_user:
-        name: admin
-        password: admin1
+        name: "{{ wp_db_admin_user }}"
+        password: "{{ wp_db_admin_pass }}"
         priv: '*.*:ALL'
         state: present
         host: '%'
@@ -34,9 +34,9 @@
 
     - name: Create a wordpress user
       mysql_user:
-        name: wordpress_user
-        password: wordpress_pass
-        priv: 'wordpress_db.*:ALL'
+        name: "{{ wp_db_user }}"
+        password: "{{ wp_db_pass }}"
+        priv: "{{ wp_db_name }}.*:ALL"
         state: present
         host: '%'
       become: yes
@@ -103,7 +103,7 @@
         regexp: "{{ item.regex }}"
         replace: "{{ item.value }}"
       with_items:
-        - { regex: 'database_name_here', value: 'wordpress_db'}
+        - { regex: 'database_name_here', value: "{{ wp_db_name }}"}
         - { regex: 'username_here', value: 'wordpress_user'}
         - { regex: 'password_here', value: 'wordpress_pass'}
         - { regex: 'localhost', value: '172.28.128.9'}  
