add template to configure wordpress

--- a/env_wordpress/config/ansible/group_vars/all.yml
+++ b/env_wordpress/config/ansible/group_vars/all.yml
@@ -5,3 +5,6 @@ wp_db_admin_pass: admin1
 wp_db_user: wordpress_user
 wp_db_pass: wordpress_pass
 wp_db_hostname: 172.28.128.9
+
+wp_app_hostname: 172.28.128.8
+wp_app_wordpress_home: /var/www/wordpress
