--- a/env_wordpress/config/ansible/playbook.yml
+++ b/env_wordpress/config/ansible/playbook.yml
@@ -92,28 +92,27 @@
 
     - name: Copy WP config files
       copy:
-        src: '/var/www/wordpress/wp-config-sample.php'
-        dest: '/var/www/wordpress/wp-config.php'
+        src: "{{ wp_app_wordpress_home }}/wp-config-sample.php"
+        dest: "{{ wp_app_wordpress_home }}/wp-config.php"
         remote_src: yes
       become: yes
 
     - name: Replace WP configuration values
       replace:
-        path: '/var/www/wordpress/wp-config.php'
+        path: "{{ wp_app_wordpress_home }}/wp-config.php"
         regexp: "{{ item.regex }}"
         replace: "{{ item.value }}"
       with_items:
         - { regex: 'database_name_here', value: "{{ wp_db_name }}"}
-        - { regex: 'username_here', value: 'wordpress_user'}
-        - { regex: 'password_here', value: 'wordpress_pass'}
-        - { regex: 'localhost', value: '172.28.128.9'}  
+        - { regex: 'username_here', value: "{{ wp_db_user }}"}
+        - { regex: 'password_here', value: "{{ wp_db_pass }}"}
+        - { regex: 'localhost', value: "{{ wp_db_hostname }}"}  
       become: yes
 
-    - name: Copy 000-default.conf
-      copy:
-        src: '/devops/config/000-default.conf'
+    - name: 'Set Apache 000-default.conf to user wordpress'
+      template:
+        src: 'templates/000-default.conf.j2'
         dest: '/etc/apache2/sites-available/000-default.conf'
-        remote_src: yes 
       become: yes  
       notify:
           - restart_apache
