--- a/env_wordpress/config/ansible/playbook.yml
+++ b/env_wordpress/config/ansible/playbook.yml
@@ -1,118 +1,9 @@
 ---
 - hosts: wp_mysql
-  handlers:
-  - name: restart_mysql
-    service:
-      name: mysql
-      state: restarted
-    become: yes
-
-  tasks:
-    - name: Install mysql
-      apt:
-        update_cache: yes
-        name: 
-          - mysql-server-5.7
-          - python3-mysqldb
-        state: latest
-      become: yes
-
-    - name: Create mysql database - wordpress_db
-      mysql_db:
-        name: "{{ wp_db_name }}"
-        state: present 
-      become: yes
-
-    - name: Create a admin user
-      mysql_user:
-        name: "{{ wp_db_admin_user }}"
-        password: "{{ wp_db_admin_pass }}"
-        priv: '*.*:ALL'
-        state: present
-        host: '%'
-      become: yes
-
-    - name: Create a wordpress user
-      mysql_user:
-        name: "{{ wp_db_user }}"
-        password: "{{ wp_db_pass }}"
-        priv: "{{ wp_db_name }}.*:ALL"
-        state: present
-        host: '%'
-      become: yes
-
-    - name: enable external connection
-      replace:
-        path: '/etc/mysql/mysql.conf.d/mysqld.cnf'
-        regexp:  'bind-address'
-        replace: '#bind-address'
-      become: yes
-      notify: restart_mysql  
-
+  roles:
+    - mysql
 
 - hosts: wp_app
-  handlers:
-    - name: restart_apache
-      service:
-        name: apache2
-        state: restarted
-      become: yes
-
-  tasks:
-    - name: Install PHP and Apache2 dependencies
-      apt:
-        update_cache: yes
-        name: 
-          - php7.2
-          - apache2
-          - libapache2-mod-php7.2
-          - php7.2-cli
-          - php7.2-common
-          - php7.2-mbstring
-          - php7.2-gd
-          - php7.2-intl
-          - php7.2-xml
-          - php7.2-mysql
-          - php7.2-zip
-          - python3-mysqldb
-        state: latest
-      become: yes
-
-    - name: Download wordpress package
-      get_url:
-        url: https://wordpress.org/latest.tar.gz
-        dest: /tmp/wordpress.tar.gz
-    
-    - name: Extract wordpress.tar.gz
-      unarchive:
-        src: /tmp/wordpress.tar.gz
-        dest: /var/www/
-        remote_src: yes
-      become: yes
-
-    - name: Copy WP config files
-      copy:
-        src: "{{ wp_app_wordpress_home }}/wp-config-sample.php"
-        dest: "{{ wp_app_wordpress_home }}/wp-config.php"
-        remote_src: yes
-      become: yes
-
-    - name: Replace WP configuration values
-      replace:
-        path: "{{ wp_app_wordpress_home }}/wp-config.php"
-        regexp: "{{ item.regex }}"
-        replace: "{{ item.value }}"
-      with_items:
-        - { regex: 'database_name_here', value: "{{ wp_db_name }}"}
-        - { regex: 'username_here', value: "{{ wp_db_user }}"}
-        - { regex: 'password_here', value: "{{ wp_db_pass }}"}
-        - { regex: 'localhost', value: "{{ wp_db_hostname }}"}  
-      become: yes
-
-    - name: 'Set Apache 000-default.conf to user wordpress'
-      template:
-        src: 'templates/000-default.conf.j2'
-        dest: '/etc/apache2/sites-available/000-default.conf'
-      become: yes  
-      notify:
-          - restart_apache
+  roles:
+    - webserver
+    - wordpress
