--- a/env_wordpress/Vagrantfile
+++ b/env_wordpress/Vagrantfile
@@ -34,12 +34,12 @@ Vagrant.configure("2") do |config|
 		wp_app.vm.synced_folder "./config",	 "/devops/config"
 
 		wp_app.vm.provision "shell", inline: $add_ssh_key
-	end
 
-	# run ansible
-	#config.vm.provision "ansible" do |ansible|
-	#	ansible.inventory_path = "./config/ansible/hosts"
-	# 	ansible.playbook = "./config/ansible/playbook.yml"
-	#end
+		# run ansible
+		wp_app.vm.provision "ansible" do |ansible|
+			ansible.inventory_path = "./config/ansible/hosts"
+		 	ansible.playbook = "./config/ansible/playbook.yml"
+		end
+	end
 
 end
