--- a/env_wordpress/Vagrantfile
+++ b/env_wordpress/Vagrantfile
@@ -35,8 +35,8 @@ Vagrant.configure("2") do |config|
 
 		wp_app.vm.provision "shell", inline: $add_ssh_key
 
-		# run ansible
 		wp_app.vm.provision "ansible" do |ansible|
+			ansible.limit = "all"
 			ansible.inventory_path = "./config/ansible/hosts"
 		 	ansible.playbook = "./config/ansible/playbook.yml"
 		end
